k8s/apps/frontend/dev/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: igreja-dev
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 112367726434.dkr.ecr.us-east-1.amazonaws.com/igreja-frontend:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 80
