k8s/apps/frontend/dev/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: igreja-dev
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
