k8s/apps/frontend/dev/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-dev
  namespace: igreja-dev
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: frontend-dev.ministerionovotempo.app.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
